[metadata]
name = python-rctclient
summary = Hyper-V RCT Command-line Client
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    rct

[entry_points]
console_scripts =
    rct = rct.cli.shell:main

[wheel]
universal = 1
